# Clarence

./: .breakpoints  .gitignore  Dockerfile  Lists_Storage.py  README  README.md  embed_storage.py  functions.py  games.py  gitignore  keep_alive.py  keys.env  main.py  mod.py  music.py  nixpacks.toml  pyproject.toml  requirements.py  requirements.txt  requirements2.txt  run.sh  services.py  status.py  structures.py  trie.py  words.txt
.cache/replit/: __replit_disk_meta.json
.claude/: settings.local.json
Storage/: Old Code
cogs/: flight.py  games.py  help.py  math.py  mod.py  music.py  owner.py  poker.py  services.py  translate.py  trivia.py
constants/: cookies.txt  embeds.py  lists.py  paradigm.txt
functionality/: days.py  functions.py  keep_alive.py  structures.py  trie.py
storage/: Lists_Storage.py  Old Code  Old Code.txt  embed_storage.py  guild_config.json  nft.json  paradigm.txt  poker.json  prefixes.json  swears.json  trivia.json  words.txt
