[tool.poetry]
name = "troll-bot"
version = "0.1.0"
description = ""
authors = ["HBombmxpwr <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^2.1.0"
youtube_dl = "^2021.12.17"
youtube-search = "^2.1.2"
PyNaCl = "^1.5.0"
xkcd = "^2.4.2"
tweepy = "^4.12.1"
wolframalpha = "^5.0.0"
pyfiglet = "^0.8.post1"
wikipedia = "^1.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
